manifests/apps/gateway-system/shared-gateway/configs/gateway-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.11.100.10
  # infrastructure:
  #   annotations:
  #     external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k8s.${DOMAIN_0}"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.${DOMAIN_0}"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-k8s-tls
