manifests/apps/gateway-system/shared-gateway/configs/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.11.100.11
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.k8s.${DOMAIN_0}"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.${DOMAIN_0}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-k8s-tls
